--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -293,3 +293,22 @@ input.button[type="submit"] {
 		}
 	}
 }
+
+// button group
+.button-group {
+	font-size: 0;
+
+	.button {
+		@include typo-button();
+		
+		border-radius: 0;
+
+		&:first-child {
+			border-radius: $button-border-radius 0 0 $button-border-radius;
+		}
+
+		&:last-child {
+			border-radius: 0 $button-border-radius $button-border-radius 0;
+		}
+	}
+}
