Reorganize scss files

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,7 +11,6 @@
 @import "base/general.scss";
 @import "base/headings.scss";
 @import "base/links.scss";
+@import "base/site.scss";
 
 @import "components/button.scss";
-
-@import "modules/site.scss";
